changes to themes

--- a/sites/all/modules/features/scholar_dvn/scholar_dvn.css
+++ b/sites/all/modules/features/scholar_dvn/scholar_dvn.css
@@ -1,20 +1,12 @@
-html, body,
-.section-data #wrapper,
-.section-data #container,
-.section-data #content-main,
-.section-data #content-wrapper,
-object#feature-dataverse {
-  height: 100%;
-  }
-
-.section-data #content-wrapper {
-  min-height: 1600px;
-  }
-
-object#feature-dataverse {
-  position: relative;
+#feature-dataverse {
   width: 100%;
+  height: 1640px;
+  }
+
+iframe {
+  border: none;
   padding: 0;
-  margin:0;
-  min-height: 1560px;
+  margin: 0;
+  height: 100%;
+  width:100%;
   }
