--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -244,3 +244,22 @@ dd.scholarlayout-item .close-this {
 #scholarlayout-container .widget-prev, #scholarlayout-container .widget-next{
   display:none;
   }
+
+#edit-settings-layout-page-type-wrapper {
+  position: relative;
+  }
+
+.ahah-progress {
+  position: absolute;
+  left: 260px;
+  top:-9px;
+  height: 31px;
+  padding-top: 6px;
+  float:none;
+  background: #666F7A;
+  width: 200px;
+  color: #FBD242;
+  line-height: 26px;
+  font-weight:bold;
+  }
+
