--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -613,9 +613,11 @@ div.error {
   background:transparent url(images/throbber.gif) no-repeat scroll 0 50%;
   float:left;
   height:5px;
-  margin:0 0 0 8px;
+  height: 100%;
+  margin:0 4px 0 8px;
   width:21px;
   }
+
 
 .flag-waiting .flag-throbber {
   float:none;
