changes to gary theme plus tabs

--- a/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
+++ b/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
@@ -47,7 +47,6 @@
 	}
 
 .ui-widget-header a {
-
 	}
 
 
@@ -61,32 +60,20 @@
 	}
 
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus {
-	border: 1px solid #999999/*{borderColorHover}*/;
-	background: #dadada/*{bgColorHover}*/ url(images/ui-bg_glass_75_dadada_1x400.png)/*{bgImgUrlHover}*/ 50%/*{bgHoverXPos}*/ 50%/*{bgHoverYPos}*/ repeat-x/*{bgHoverRepeat}*/;
-	font-weight: normal/*{fwDefault}*/;
-	color: #212121/*{fcHover}*/;
+	font-weight: normal;
+	color: #212121;
 	outline: none;
 	}
 
 .ui-state-hover a, .ui-state-hover a:hover {
-	color: #212121/*{fcHover}*/;
 	text-decoration: none;
 	outline: none;
 	}
 
-.ui-state-active, .ui-widget-content .ui-state-active {
-	border: 1px solid #aaaaaa/*{borderColorActive}*/;
-	background: #ffffff/*{bgColorActive}*/ url(images/ui-bg_glass_65_ffffff_1x400.png)/*{bgImgUrlActive}*/ 50%/*{bgActiveXPos}*/ 50%/*{bgActiveYPos}*/ repeat-x/*{bgActiveRepeat}*/;
-	font-weight: normal/*{fwDefault}*/;
-	color: #212121/*{fcActive}*/;
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
 	outline: none;
 	}
 
-.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
-	color: #212121/*{fcActive}*/;
-	outline: none;
-	text-decoration: none;
-	}
 
 
 /* Interaction Cues
