--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -31,12 +31,11 @@ h4 {
 h2.title, h3.title {
   line-height: 1em;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 31px;
   }
 
-.column .content {
-  margin-top: 31px;
-  }
+
+
 
 a, a:visited {
   color:#34666e;
@@ -65,7 +64,7 @@ a:hover {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   background: url(images/heading.png) repeat-x 0 0 #fff;
-  padding: 8px 16px 16px 16px;
+  padding: 13px 16px 16px 16px;
   }
 
 #content-main #content {
@@ -147,11 +146,8 @@ a:hover {
   }
 
 .page-home #header-right .block {
-  height: 222px;
+  height: 217px;
   }
-
-
-
 
 #content-wrapper .block {
   margin-bottom: 8px;
@@ -306,4 +302,17 @@ body.header-right-main #header-wrapper {
 
 #header #block-scholar_biocv-bio_blurb .content {
   margin-top: 0;
+  }
+
+/* Publications Tabs */
+
+h3.tabs, ul.ui-tabs-nav {
+  float: left;
+  display:inline !important;
+  clear: none;
+  margin-bottom: 0;
+  }
+
+.ui-tabs-panel {
+  clear: both;
   }
