changes to projects front and gary theme

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -316,3 +316,35 @@ h3.tabs, ul.ui-tabs-nav {
 .ui-tabs-panel {
   clear: both;
   }
+
+/* Search form*/
+
+#footer #search-form .container-inline {
+  background: transparent;
+  height: 20px;
+  padding-right: 0;
+  width: 290px;
+  }
+
+#footer #search-form #edit-keys-wrapper {
+  width: auto;
+  width:216px;
+  }
+
+#footer #search-form #edit-keys {
+  border: 1px solid #c3c3c3;
+  padding: 3px 4px 1px 0;
+  }
+
+#footer #search-form input#edit-submit {
+  background: #79929c;
+  color: #fff;
+  width: 52px;
+  height: 20px;
+  text-indent:0;
+  text-transform: uppercase;
+  -moz-border-radius:0;
+  -webkit-border-radius: 0;
+  margin: 0;
+  float:right;
+  }
