--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -5,9 +5,15 @@ body {
     }
 
 #wrapper {
-  background: url(images/wrapper-bg.png) repeat-x #efefef;
   padding-top: 26px;
+  background: url(images/wrapper-bg.png) repeat-x #efefef;
   }
+
+
+.section-user #wrapper, .section-users #wrapper {
+  background: #444;
+  }
+
 
 #container {
     width: 995px;
@@ -132,6 +138,10 @@ div.form-item {
   background: url(images/scholars-at-harvard-logo.png) no-repeat;
   text-indent: -999em;
   margin-left: 13px
+  }
+
+.section-user #header h1, .section-users #header h1 {
+  background-image: url(images/scholars-at-harvard-logo-on-white.png);
   }
 
 #header h1 a, #header h1 a:visited {
