--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -1,5 +1,4 @@
-﻿/* $Id: forms.css,v 1.2 2008/01/06 15:50:31 swortis Exp $ */
-
+﻿/* FORMS CSS */
 
 div.form-item {
   border:1px solid #CCCCCC;
@@ -45,9 +44,9 @@ div.teaser-checkbox div.form-item, div.form-item div.form-item, fieldset div.for
   }
 
 .admin {
-	padding-top: 1.5em;
-	clear: both;
-	}
+  padding-top: 1.5em;
+  clear: both;
+  }
 
 select option {
   padding: 2px 5px;
