--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -213,13 +213,13 @@ ul#top-front li#get-form a:hover {
 #content-row-1 {
   background: url(images/contain.png) no-repeat;
   height: 416px;
-  padding-top: 1px;
   position: relative;
   }
 
 #content-row-1 .content {
   height: 321px;
-  margin: 25px auto 0 auto;
+  margin: 0 auto;
+  padding-top: 25px;
   width: 919px;
   }
 
