--- a/sites/all/themes/scholar_base/tables.css
+++ b/sites/all/themes/scholar_base/tables.css
@@ -1,6 +1,4 @@
-﻿/* $Id: tables.css,v 1.2 2008/09/08 02:35:29 swortis Exp $ */
-
-/*
+﻿/*
  * Tables CSS
  *
  */
@@ -67,7 +65,3 @@ table.package .version {
 table.package .description {
 	width: 100%;
 	}
-
-
-/* BIBLIO TABLES */
-
