--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -5,7 +5,7 @@ html, body, #container {
 body {
   font: 14px/17px 'trebuchet ms', arial, helvetica, sans-serif;
   color: #000;
-  background: url(images/body-bg.png) repeat-x 0 100% #fff;
+  background: fixed url(images/body-bg.png) repeat-x 0 100% #fff;
   }
 
 /* TYPOGRAPHY */
