jquery ui changes, publications

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -103,3 +103,7 @@ div.view-gallery table.views-view-grid {
   font-size: .8em;
   line-height: 1.3em;
   }
+
+#block-views-scholar_image_gallery-block_1 {
+  overflow: auto;
+  }
