--- a/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.tabs.css
+++ b/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.tabs.css
@@ -9,7 +9,7 @@
 	position: relative;
 	}
 
-.ui-tabs .ui-tabs-nav li {
+.ui-tabs-nav li {
 	position: relative;
 	float: left;
 	border-bottom-width: 0 !important;
@@ -18,11 +18,11 @@
 	list-style:none;
 	}
 
-.ui-tabs .ui-tabs-nav li a {
+.ui-tabs-nav li a {
 	padding: .5em 1em;
 	}
 
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected {
+ui-tabs-nav li.ui-tabs-selected {
 	padding-bottom: 1px;
 	border-bottom-width: 0;
 	}
