--- a/sites/all/modules/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/iqss/iqss_gking/iqss_gking.css
@@ -1,6 +1,7 @@
 #block-iqss_gking-areas_of_research li {
   list-style: none;
   margin-bottom: 1.5em;
+  margin-left:0;
   }
 
 #block-iqss_gking-areas_of_research li .term_title {
