--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -51,8 +51,13 @@ h2.title, h3.title {
   }
 
 
-a, a:visited {
-  color:#1b93a5;
+a {
+  color:#c36403;
+  text-decoration: none;
+  }
+
+a:visited {
+  color: #713811
   }
 
 a:hover {
