adding minor smoothing  effect to navbar hovers

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -218,7 +218,9 @@ a:hover {
   }
 
 .page-home #header-right .block {
-  height: 217px;
+  height: 218px;
+  overflow:scroll;
+  overflow-x: hidden;
   }
 
 #content-wrapper .block {
