--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -52,12 +52,11 @@ h2.title, h3.title {
 
 
 a {
-  color:#c36403;
   text-decoration: none;
   }
 
 a:visited {
-  color: #713811
+  color: #59798F;
   }
 
 a:hover {
