--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -3,7 +3,7 @@ html, body, #container {
   }
 
 body {
-  font: 14px/17px 'trebuchet ms', arial, helvetica, sans-serif;
+  font: 90%/1.4em arial, helvetica, sans-serif;
   color: #000;
   background: fixed url(images/body-bg.png) repeat-x 0 100% #fff;
   }
@@ -17,6 +17,15 @@ body {
 	font-weight: normal;
 	font-style: normal;
 }
+
+
+p, .biblio-entry, .views-row {
+  margin: 0 0 1.5em 0;
+  }
+
+.biblio-note p {
+  margin: 0;
+  }
 
 h1, h2, h3, h4, #block-vsite_menus-0 li, #footer {
   font-weight: normal;
