--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -107,15 +107,11 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   margin: 0;
   right:0;
   left:auto;
+  overflow: hidden;
   }
 
 .frame {
-  /*
-  position: relative;
-  overflow-y: auto;
-  overflow-x: hidden;
-  height: 100%;
-  */
+  overflow:hidden;
   }
 
 .innerframe {
