--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -73,6 +73,21 @@ a:hover {
   }
 
 
+.item-list .pager li {
+  margin: 0;
+  padding: 3px 9px;
+  background: #6F6F6F;
+  }
+
+.item-list .pager li a {
+  color: #fff;
+  }
+
+.item-list .pager li.pager-current {
+  color: #000;
+  background: #DB7000;
+  }
+
 /* BASIC LAYOUT */
 
 #wrapper {
