small bug in scrolling

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -123,6 +123,10 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
+#sidebar-right .innerframe {
+  width: 185px;
+  }
+
 #cp-content .innerframe form,
 .view-display-id-page_1,
 #cp-content .views-processed,
