--- a/sites/all/modules/features/scholar_reader/theme/scholar-reader.css
+++ b/sites/all/modules/features/scholar_reader/theme/scholar-reader.css
@@ -15,3 +15,13 @@
 .node-type-feed .views-field-description {
   margin-top: .5em;
   }
+
+#block-scholar_reader-my_twitter_feed li {
+  clear:both;
+  margin-bottom: 1.5em;
+  }
+
+#block-scholar_reader-my_twitter_feed img {
+  float:left;
+  margin: 0 .7em .1em 0;
+  }
