--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -94,7 +94,7 @@ dd.scholarlayout-item {
   margin: 0;
   padding: 4px 20px 8px 31px;
   background: url(images/widget-placed-bg.png) no-repeat 0 50% #f0f3f3;
-  min-height: 21px;
+  height: 23px;
   position:relative;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #666;
