--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -412,7 +412,7 @@ body.header-right-main #header-wrapper {
 
 .ui-tabs .ui-tabs-nav {
   border-bottom: 1px solid #cecece;
-  margin: 0 -16px;
+  margin: 0 -16px 1em -16px;
   padding: 0 16px 9px 16px;
   }
 
