--- a/sites/all/themes/scholar_base/biblio.css
+++ b/sites/all/themes/scholar_base/biblio.css
@@ -221,3 +221,8 @@ ul.biblio-export-buttons,ul.biblio-export-buttons li {
 #biblio-header {
   display: block;
 }
+
+body.node-type-biblio .node-type-biblio .field-field-biblio-image {
+  padding-top:.6em;
+  }
+
