--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -47,6 +47,16 @@ body.admin-menu {
   background: #444;
   }
 
+.flL {
+  float:left;
+  margin: 0 .5em 1em 0;
+  }
+
+.flR {
+  float: right;
+  margin: 0 0 .1em 1em;
+  }
+
 .clear {
   clear:both;
   }
