--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -410,43 +410,68 @@ body.header-right-main #header-wrapper {
 
 /* Publications Tabs */
 
-#pub_type_tabs h3 {
+.page-home #content-main #content {
+  background:url(images/front-center-bg.png) repeat-x 0 0 #fff;
+  }
+
+#pub_type_tabs h3.title {
   float: left;
+  margin-right: 0;
+  padding-bottom: 0;
+  padding-right: 0;
+  margin-right: 15px;
+  margin-bottom: 0;
+  line-height: 24px;
+  border:none;
   }
 
 .ui-tabs .ui-tabs-nav {
-  border: 1px solid #cecece;
-  border-top: none;
-  border-right: none;
-  margin: 0 -16px 1em 16px;
-  padding: 0;
-  width: 130px;
-  float:right;
-  -moz-border-radius: 0 0 0 4px;
+  -moz-border-radius: 0;
   -webkit-border-bottom-right-radius: 0 0;
+  -webkit-border-bottom-left-radius: 0 0;
   -webkit-border-top-left-radius: 0 0;
   -webkit-border-top-right-radius: 0 0;
+  margin:0 -16px 0.5em;
+  padding:17px 16px 18px 16px;
+  height: 58px;
+  border-bottom:1px solid #D7D7D7;
+  }
+
+.ui-widget-header {
+  background: transparent;
   }
 
 .ui-tabs-nav li {
-  display: block;
+  float: left;
   margin: 0;
+  line-height:20px;
+  margin-right: 15px;
   }
 
 
-.ui-tabs-nav li a {
-  font-weight: bold;
-  padding: 2px 9px;
+.ui-tabs-nav li:last-child {
+  margin-right: 0;
   }
 
-.ui-tabs-nav li.ui-state-default a, .ui-tabs-nav li.ui-state-default a:visited {
-  color:#96a5a6;
-  font-weight: bold;
+.ui-tabs-nav li a,.ui-tabs-nav li.ui-state-default a, .ui-tabs-nav li.ui-state-default a:visited  {
+  font-weight: bold !important;
+  padding: 0;
+  color:#ac9986 !important;
   font-size: 14px;
   }
 
 .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs-nav li.ui-tabs-selected a:visited {
-  color: #000 !important;
+  color: #db7002 !important;
+   }
+
+
+.ui-tabs .ui-tabs-panel {
+  clear: both;
+  }
+
+
+.ui-tabs-panel .biblio-entry span {
+
   }
 
 /* Search form*/
