--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -411,7 +411,7 @@ body.header-right-main #header-wrapper {
 /* Publications Tabs */
 
 .page-home #content-main #content {
-  background:url(images/front-center-bg.png) repeat-x 0 0 #fff;
+  background:url(images/front-center-bg.png) repeat-x 0 -22px #fff;
   }
 
 #pub_type_tabs h3.title {
@@ -433,7 +433,7 @@ body.header-right-main #header-wrapper {
   -webkit-border-top-right-radius: 0 0;
   margin:0 -16px 0.5em;
   padding:17px 16px 18px 16px;
-  height: 58px;
+  height: 35px;
   border-bottom:1px solid #D7D7D7;
   }
 
