--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -63,7 +63,7 @@ body.admin-menu {
 
 /* TYPE STYLES */
 
-p, div.messages, #content-main .views-row, ul, ol {
+p, div.messages, #content-main .views-row, ul, ol, .taxonomy-term-description {
   margin-bottom: 1.5em;
   }
 
@@ -105,8 +105,16 @@ ol {
   padding-left: 0;
   }
 
-#content .node .terms ul li {
-  padding-left: 0;
+.meta .terms ul li, .meta .terms ul li a {
+  padding: 0;
+  }
+
+.meta .terms ul li:after {
+  content:',';
+  }
+
+.meta .terms ul li:last-child:after {
+  content: '';
   }
 
 #content .node ul li ul {
