change to tax block links

--- a/sites/all/modules/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/iqss/iqss_gking/iqss_gking.css
@@ -11,5 +11,6 @@
 
 #block-iqss_gking-areas_of_research li a {
   background: url(images/arrow-aqua.png) no-repeat 100% 50%;
-  padding-right: 15px;
+  padding-right: 12px;
+  margin-right: 11px;
   }
