tables css removing tabs

--- a/sites/all/themes/scholar_base/tables.css
+++ b/sites/all/themes/scholar_base/tables.css
@@ -1,20 +1,14 @@
-﻿/*
- * Tables CSS
- *
- */
-
-table {
-	border-collapse: collapse;
-	text-align:left;
-	width: 100%;
-	}
+﻿table {
+  border-collapse: collapse;
+  text-align:left;
+  width: 100%;
+  }
 
 th, td {
-	padding: .6em;
-	vertical-align: top;
-	color:#4a4a4a;
-
-	}
+  padding: .6em;
+  vertical-align: top;
+  color:#4a4a4a;
+  }
 
 td:first-child {
   text-align: left;
@@ -30,8 +24,8 @@ tbody, tbody th {
   }
 
 th.checkbox, td.checkbox {
-	text-align: center;
-	}
+  text-align: center;
+  }
 
 tr.even, tr.odd {
   background-color: transparent;
@@ -54,14 +48,12 @@ tr.selected td, tr.selected td a {
   color: #fff;
   }
 
-
-
 /* MODULES LIST */
 
 table.package .version {
-	direction: ltr;
-	}
+  direction: ltr;
+  }
 
 table.package .description {
-	width: 100%;
-	}
+  width: 100%;
+  }
