--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -59,6 +59,11 @@ h2.title, h3.title {
   border-bottom:1px solid #e5e5e5;
   }
 
+#content .node h3.title {
+  border: none;
+  padding: 0;
+  margin:0;
+  }
 
 a {
   text-decoration: none;
